--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@ user experience. </p>
 <section id="contact">
   <p class="contact-heading">soooo, <span style="color: lightskyblue;">what now?</span></p>
   <div class="contact-buttons">
-    <a href="https://drive.google.com/file/d/1KWYSWP011BEJul69v7-i7kG8XJXRU-qn/view?usp=drive_link" target="_blank" rel="noopener" class="btn">you can Browse my resume ↗</a>
+    <a href="https://drive.google.com/file/d/1SVsl76dz66GzhnQtAyaGKB28Xz3HFH7l/view?usp=sharing" target="_blank" rel="noopener" class="btn">You can Browse my resume ↗</a>
+
     <a href="https://www.linkedin.com/in/manasvinaik/" target="_blank" rel="noopener" class="btn">Reach out to me on LinkedIn ↗</a>
     <a href="https://github.com/manasvinaik" target="_blank" rel="noopener" class="btn">scope out my github ↗</a>
     <a href="#hero" class="btn">orrr go for a round two?</a>
