--- a/index.html
+++ b/index.html
@@ -246,7 +246,12 @@ user experience. </p>
     <a href="https://github.com/manasvinaik" target="_blank" rel="noopener" class="btn">scope out my github ↗</a>
     <a href="#hero" class="btn">orrr go for a round two?</a>
   </div>
-  <script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=40507498&main=1"></script><noscript><img src="//counter1.fc2.com/counter_img.php?id=40507498&main=1" /></noscript>
+  <!-- Viewer counter -->
+  <div id="counter-container">
+    <p class="counter-text">You're viewer number</p>
+    <script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=40507498&main=1"></script>
+    <noscript><img src="//counter1.fc2.com/counter_img.php?id=40507498&main=1" /></noscript>
+  </div>
 </section>
 
 
