addition of the counter tag

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ user experience. </p>
   </div>
   <!-- Viewer counter -->
   <div id="counter-container">
-    <p class="counter-text">You're viewer number</p>
+    <p class="counter-text">thanks for stopping by! — you’re visitor number</p>
     <script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=40507498&main=1"></script>
     <noscript><img src="//counter1.fc2.com/counter_img.php?id=40507498&main=1" /></noscript>
   </div>
@@ -270,3 +270,4 @@ user experience. </p>
 
 </body>
 </html>
+
