--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   <div class="timeline">
     <div class="timeline-entry left">
       <div class="timeline-content">
-        <h3 class="timeline-title">CURRENT | Profile Options Management Group: Web Development Intern</h3>
+        <h3 class="timeline-title">Profile Options Management Group: Web Development Intern</h3>
         <p class="timeline-detail">Developing the official website of POMG, showcasing all services offered and enhancing overall 
 user experience. </p>
       </div>
@@ -240,7 +240,7 @@ user experience. </p>
 <section id="contact">
   <p class="contact-heading">soooo, <span style="color: lightskyblue;">what now?</span></p>
   <div class="contact-buttons">
-    <a href="https://drive.google.com/file/d/1tER0ie9LzNmMF2tV5pMiVnS1TtV_9GWk/view?usp=sharing" target="_blank" rel="noopener" class="btn">You can Browse my resume ↗</a>
+    <a href="https://drive.google.com/file/d/1tER0ie9LzNmMF2tV5pMiVnS1TtV_9GWk/view?usp=drive_link" target="_blank" rel="noopener" class="btn">You can Browse my resume ↗</a>
 
     <a href="https://www.linkedin.com/in/manasvinaik/" target="_blank" rel="noopener" class="btn">Reach out to me on LinkedIn ↗</a>
     <a href="https://github.com/manasvinaik" target="_blank" rel="noopener" class="btn">scope out my github ↗</a>
@@ -270,5 +270,6 @@ user experience. </p>
 
 </body>
 </html>
+
 
 
